syntax = "proto3";

option go_package = "/story";

import "google/protobuf/timestamp.proto";

package story;

service StoryService {
    /* Test functions */
    rpc SayHello (Empty) returns (HelloReply) {}
    rpc DropCollection(Empty) returns (Empty) {}
    /* Create functions */
    rpc CreateComment (CreateCommentRequest) returns (CreateCommentResponse) {}
    rpc CreateStory (CreateStoryRequest) returns (CreateStoryResponse) {}
    /* Delete functions */
    rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse) {}
    rpc DeleteStory (DeleteStoryRequest) returns (DeleteStoryResponse) {}
    /* Get functions */
    rpc GetOneStory (GetOneStoryRequest) returns (GetOneStoryResponse) {}
    rpc GetRecommended (GetRecommendedRequest) returns (GetRecommendedResponse) {}
}

/* Reuseable struct */
message Comment {
    string id = 1;
    string comment = 2;
    google.protobuf.Timestamp time = 3;
    string commenter = 4;
    string commenter_id = 5;
}

message Empty {}
message HelloReply {
  string message = 1;
}

message CreateCommentRequest {
    string comment = 1;
    string commenter = 2;
    string commenter_id = 3;
    string commented_story_id = 4;
    // google.protobuf.Timestamp date = 5; // Time will be default to the time request hitted
}
message CreateCommentResponse {
    string message = 1;
}

message CreateStoryRequest {
    string author = 1;
    string author_id = 2;
    string content = 3;
    string title = 4;
    string sub_title = 5;
    repeated string tags = 6;
    // google.protobuf.Timestamp created_at = 7; // Will be default to the time request hitted
    // repeated Comment comments = 8; // Will be init to empty comment list
}
message CreateStoryResponse {
    string message = 1;
}

message DeleteCommentRequest {
    string story_id = 1;
    string comment_id = 2;
}
message DeleteCommentResponse {
    string message = 1;
}

message DeleteStoryRequest {
    string story_id = 1;
}
message DeleteStoryResponse {
    string message = 1;
}

message GetOneStoryRequest {
    string story_id = 1;
}
message GetOneStoryResponse {
    string author = 1;
    string author_id = 2;
    string content = 3;
    string title = 4;
    string sub_title = 5;
    google.protobuf.Timestamp created_at = 6;
    repeated Comment comments = 7;
    repeated string tags = 8;
}

message GetRecommendedRequest {
    string user_id = 1;
}
message GetRecommendedResponse {
    repeated string story_id_list = 1;
}
